task2/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sec-svc
spec:
  selector:
    app: sec-app
  ports:
    - name: nginx-port
      protocol: TCP
      port: 9001
      targetPort: 80
