task2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /demo.html
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myapp.example.com
      secretName: my-sec
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sec-svc
                port:
                  number: 9001
